<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addresses_graph"
    app:startDestination="@id/addressesFragment">

    <fragment
        android:id="@+id/addressesFragment"
        android:name="com.souqApp.presentation.addresses.addresses.AddressesFragment"
        android:label="@string/mange_addresses_str"
        tools:layout="@layout/fragment_addresses">
        <action
            android:id="@+id/to_addressDetailsFragment"
            app:destination="@id/addressDetailsFragment" />
        <action
            android:id="@+id/to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
    </fragment>

    <fragment
        android:id="@+id/addressDetailsFragment"
        android:name="com.souqApp.presentation.addresses.address_details.AddressDetailsFragment"
        android:label="@string/address_details"
        tools:layout="@layout/fragment_address_details">

        <argument
            android:name="addressId"
            app:argType="integer" />

    </fragment>


    <fragment
        tools:layout="@layout/fragment_add_address"
        android:id="@+id/addAddressFragment"
        android:name="com.souqApp.presentation.addresses.add_address.AddAddressFragment"
        android:label="@string/add_a_new_address_str" />
</navigation>