<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/added_to_your_cart_successfully" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/continue_shopping" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp">

        <com.google.android.material.button.MaterialButton
            android:stateListAnimator="@null"
            android:id="@+id/btn_show_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_cart" />

        <TextView
            android:id="@+id/count"
            android:layout_margin="@dimen/_8sdp"
            android:layout_gravity="center|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="10" />
    </FrameLayout>


</LinearLayout>