<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="details"
            type="com.souqApp.domain.main.cart.entity.CheckoutDetailsEntity" />


        <variable
            name="deliveryOptionOne"
            type="com.souqApp.domain.main.cart.entity.DeliveryOptionEntity" />

        <variable
            name="deliveryOptionTwo"
            type="com.souqApp.domain.main.cart.entity.DeliveryOptionEntity" />

        <variable
            name="selectedFullAddress"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".presentation.main.cart.checkout_details.CheckOutDetailsFragment">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="#F2F1F6"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <com.souqApp.infra.custome_view.LabelWithValueHorizontal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/sub_total_str"
                    app:value="@{details.subTotal}"
                    tools:value="100 JOD" />

                <com.souqApp.infra.custome_view.LabelWithValueHorizontal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isVisible="@{details.hasDelivery}"
                    app:label="@string/delivery_str"
                    app:value="@{details.deliveryPrice}"
                    tools:value="100 JOD" />

                <com.souqApp.infra.custome_view.LabelWithValueHorizontal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isVisible="@{details.hasTax}"
                    app:label="@string/tax"
                    app:value="@{details.valueAddedTax}"
                    tools:value="100 JOD" />

                <com.souqApp.infra.custome_view.LabelWithValueHorizontal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isVisible="@{details.hasDiscount}"
                    app:label="@string/discount_str"
                    app:value="@{details.couponDiscount}"
                    tools:value="100 JOD" />

                <com.souqApp.infra.custome_view.LabelWithValueHorizontal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:boldValue="true"
                    app:hasDivider="false"
                    app:label="@string/order_total_str"
                    app:value="@{details.totalPrice}"
                    tools:value="100 JOD" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                android:paddingBottom="@dimen/_32sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_delivery_address_sub_str"
                    android:textColor="@color/grey" />

                <RadioButton
                    android:id="@+id/radioButtonHomeDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:checked="true"
                    android:text="@{deliveryOptionOne.name}"
                    app:isVisible="@{deliveryOptionOne != null }"
                    tools:text="Option one" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/border_bg"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_edit_address"
                    android:focusable="false"
                    android:padding="@dimen/_8sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@{selectedFullAddress ?? details.userAddress.fullAddress}"
                    android:textAlignment="viewStart"
                    app:isVisible="@{deliveryOptionOne != null }"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_submit_promo_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radioButtonSitePickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:checked="false"
                    android:text="@{deliveryOptionTwo.name}"
                    app:isVisible="@{deliveryOptionTwo != null }"
                    tools:text="Option two" />

                <View
                    style="@style/Divider"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/_8sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/select_payment_method_str"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_payment_method_sub_str"
                    android:textColor="@color/grey" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp">

                    <RadioButton
                        android:id="@+id/radioButton_cash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/cash_str" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:enabled="false"
                        android:text="@string/credit_str" />
                </RadioGroup>

                <View
                    style="@style/Divider"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/_8sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/promo_code_str"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_promo_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@drawable/border_bg"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_12sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/promo_code_edt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txt_submit_promo_code"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_submit_promo_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.1"
                        android:text="@string/submit"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/submit" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>
    </ScrollView>
</layout>