<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_graph"
    app:startDestination="@id/moreFragment">

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.souqApp.presentation.main.more.home.MoreFragment"
        tools:layout="@layout/fragment_more">

        <action
            android:id="@+id/to_auth_graph"
            app:destination="@+id/auth_graph" />

        <action
            android:id="@+id/to_orders_graph"
            app:destination="@+id/orders_graph" />

        <action
            android:id="@+id/to_addresses_graph"
            app:destination="@+id/addresses_graph" />
        <action
            android:id="@+id/to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />

        <action
            android:id="@+id/to_contactUsFragment"
            app:destination="@id/contactUsFragment" />
        <action
            android:id="@+id/to_termsAndConditionsFragment"
            app:destination="@id/termsAndConditionsFragment" />
        <action
            android:id="@+id/to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/to_wishListFragment"
            app:destination="@id/wishListFragment" />
        <action
            android:id="@+id/to_changeLanguageFragment"
            app:destination="@id/changeLanguageFragment" />
        <action
            android:id="@+id/to_pageDetailsFragment"
            app:destination="@id/pageDetailsFragment" />

    </fragment>


    <include app:graph="@navigation/auth_graph" />

    <include app:graph="@navigation/addresses_graph" />

    <include app:graph="@navigation/orders_graph" />


    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.souqApp.presentation.main.more.change_password.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />



    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.souqApp.presentation.main.more.contact_us.ContactUsFragment"
        android:label="@string/contact_us_str"
        tools:layout="@layout/fragment_contact_us" />


    <fragment
        android:id="@+id/profileFragment"
        android:name="com.souqApp.presentation.main.more.profile.ProfileFragment"
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/wishListFragment"
        android:name="com.souqApp.presentation.main.more.wish_list.WishListFragment"
        android:label="@string/wish_list"
        tools:layout="@layout/fragment_wish_list" />

    <fragment
        android:id="@+id/changeLanguageFragment"
        android:name="com.souqApp.presentation.main.more.change_language.ChangeLanguageFragment"
        android:label="@string/change_language_sr"
        tools:layout="@layout/fragment_change_language" />

    <fragment
        android:id="@+id/pageDetailsFragment"
        android:name="com.souqApp.presentation.main.more.page_details.PageDetailsFragment"
        tools:layout="@layout/fragment_page_details">
        <argument
            android:name="page"
            app:argType="com.souqApp.data.settings.remote.dto.PageEntity" />
    </fragment>

</navigation>